2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>

 * scintilla/lexers/LexCPP.cxx:
   Make hightlighting of triple-quoted verbatim an option (Backport
   from Scintilla HG 3602:5536ed81a85b).
 * src/highlighting.c:
   Add highlight for triple-quoted verbatims.
 * data/filetypes.c, data/filetypes.vala, data/filetypes.Genie.conf,
   data/filetypes.Scala.conf:
   Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes.
 * data/filetypes.Genie.conf:
   Copy C styling rather than redefining the styles.
 * src/editor.c:
   Don't set font twice for line numbers and braces.


2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/templates.c:
   Remove TEMPLATES_GET_FILENAME() macro.
 * src/search.c:
   Don't auto-enable case-sensitive option when enabling regex in
   Find/Replace dialogs.


2011-04-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/gtk/ScintillaGTK.cxx:
   Fix X PRIMARY selection issue when Scintilla widget is
   unrealized/re-realized (Backport from Scintilla HG,
   original patch by Matthew Brush).
   Reset cursors when Scintilla widget is realized (Backport from
   Scintilla HG, original patch by Matthew Brush).


2011-04-04  Colomban Wendling  <colomban(at)geany(dot)org>

 * scintilla/gtk/PlatGTK.cxx:
   Fix font rendering in Scintilla when using Cairo.


2011-04-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Make Project->Properties the last menu item so it's faster to use.


2011-04-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/*:
   Update Scintilla to version 2.25.
 * version.txt, Makefile.am:
   Add Scintilla's version.txt file.
 * scintilla/makefile.win32, tagmanager/makefile.win32, makefile.win32:
   Replace escape character '\' by slash '/' in paths in the
   Windows Makefiles (patch by Matthew Brush, thanks).
 * src/tools.c:
   Reflect the existence of the entered command in `Set Custom Commands`