@@ -1,3 +1,9 @@
+2011-04-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/editor.c:
+   Ignore scrolling events in on_update_ui().
+
+
 2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * scintilla/lexers/LexCPP.cxx:
